--- a/MyRecipes.html
+++ b/MyRecipes.html
@@ -1,8 +1,16 @@
-<html>Renad's page</html>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
-    <title>Renad's page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Welcome to Renad's page</h1>
+
+  <!-- JS -->
+  <script src="javaScript.js"></script>
 </body>
 </html>
