--- a/EditRecipePage.html
+++ b/EditRecipePage.html
@@ -1,169 +1,315 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Edit Recipe</title>
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
   <style>
-    /* نفس ستايل add (مختصر) */
-    .form-card{background:var(--card-bg); border:1px solid var(--border-light); border-radius:18px; box-shadow:0 10px 25px var(--shadow-light); padding:2rem; max-width:950px; margin:0 auto;}
-    .form-title{color:var(--primary-dark); font-size:2rem; margin-bottom:1.2rem;}
-    .grid{display:grid; grid-template-columns:1fr 1fr; gap:1rem 1.2rem;}
-    label{display:block; font-weight:800; color:var(--text-medium); margin-bottom:.45rem;}
-    .field{width:100%; padding:.9rem 1rem; border-radius:14px; border:1px solid var(--border-light); background:var(--bg-lighter); color:var(--text-dark); outline:none; transition:.2s;}
-    .field:focus{border-color:var(--primary-gold); box-shadow:0 0 0 4px rgba(205,184,133,.18); background:#fff;}
-    textarea.field{min-height:120px; resize:vertical;}
-    .section{margin-top:1.6rem; padding-top:1.2rem; border-top:1px dashed var(--border-light);}
-    .section h3{color:var(--primary-dark); margin-bottom:.9rem; font-size:1.25rem;}
-    .row{display:grid; grid-template-columns:1fr 1fr; gap:1rem; margin-bottom:.85rem;}
-    .row-1col{grid-template-columns:1fr;}
-    .actions{display:flex; gap:.8rem; flex-wrap:wrap; margin-top:.8rem;}
-    .btn{display:inline-flex; align-items:center; justify-content:center; gap:.5rem; padding:.8rem 1.1rem; border-radius:999px; border:1px solid var(--border-light); background:var(--primary-light); color:var(--primary-dark); font-weight:800; cursor:pointer; box-shadow:0 8px 20px var(--shadow-light); transition:.25s; text-decoration:none;}
-    .btn:hover{transform:translateY(-2px); background:var(--primary-gold); color:#fff; box-shadow:0 12px 26px var(--shadow-gold);}
-    .btn.secondary{background:rgba(239,225,181,.35);}
-    .hint{color:var(--text-light); font-size:.95rem; margin-top:.3rem;}
-    .current-media{
-      display:flex; gap:1rem; align-items:center; flex-wrap:wrap;
-      padding:.9rem 1rem; border-radius:14px;
-      border:1px solid var(--border-light); background:rgba(239,225,181,.18);
-      margin-top:.6rem;
+    *{ box-sizing:border-box; }
+    body{
+      margin:0;
+      background-color:#efe1b5;
+      font-family:"Segoe UI", Tahoma, Arial, sans-serif;
     }
-    .current-media img{width:72px; height:72px; border-radius:14px; object-fit:cover; border:1px solid var(--border-light); background:#fff;}
-    .link{color:var(--primary-dark); font-weight:800; text-decoration:none;}
-    @media (max-width:820px){ .grid{grid-template-columns:1fr;} .row{grid-template-columns:1fr;} }
+
+    /* نفس كرت صفحة وصفاتي */
+    .edit-page{
+      max-width:1100px;
+      margin:3rem auto;
+      padding:2rem;
+      background:#fff;
+      border-radius:24px;
+      border:1px solid #cdb885;
+      box-shadow:0 18px 40px rgba(110,80,52,0.18);
+    }
+
+    .edit-header{
+      margin-bottom: 2rem;
+    }
+
+    .edit-header h1{
+      margin:0;
+      font-size:2.3rem;
+      color:#6e5034;
+      font-weight:800;
+    }
+
+    .form-card{
+      border-radius:20px;
+      padding:1.6rem;
+      border:1px solid #efe1b5;
+      box-shadow: inset 0 0 0 1px rgba(205,184,133,0.28);
+    }
+
+    .grid{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1rem 1.2rem;
+      align-items:start;
+    }
+
+    .full{ grid-column: 1 / -1; }
+
+    label{
+      display:block;
+      font-weight:800;
+      color:#6e5034;
+      margin-bottom:.45rem;
+    }
+
+    .field{
+      width:100%;
+      display:block;
+      padding:.95rem 1rem;
+      border-radius:14px;
+      border:1px solid #efe1b5;
+      background:#fff;
+      color:#5d4a32;
+      outline:none;
+      transition:.2s ease;
+    }
+
+    .field:focus{
+      border-color:#cdb885;
+      box-shadow:0 0 0 4px rgba(205,184,133,0.22);
+    }
+
+    textarea.field{ min-height:120px; resize:vertical; }
+
+    .section-title{
+      margin: 1.4rem 0 .9rem;
+      padding-top:1.2rem;
+      border-top:1px dashed #efe1b5;
+      color:#6e5034;
+      font-size:1.2rem;
+      font-weight:800;
+    }
+
+    .row{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1rem;
+      margin-bottom:.9rem;
+    }
+
+    .row-1col{ grid-template-columns: 1fr; }
+
+    /* Current photo block */
+    .photo-block{
+      display:flex;
+      gap:1.2rem;
+      align-items:flex-start;
+      flex-wrap:wrap;
+      margin-top:.4rem;
+    }
+
+    .photo-preview{
+      width: 160px;
+      height: 160px;
+      border-radius:18px;
+      object-fit:cover;
+      border:2px solid #efe1b5;
+      background:#fff;
+    }
+
+    .hint{
+      margin-top:.35rem;
+      font-size:.95rem;
+      color:#9c8a6a;
+    }
+
+    /* Buttons */
+    .actions{
+      display:flex;
+      gap:.8rem;
+      flex-wrap:wrap;
+      margin-top:1.4rem;
+    }
+
+    .btn{
+      display:inline-flex;
+      align-items:center;
+      gap:.65rem;
+      padding:.95rem 1.6rem;
+      border-radius:30px;
+      cursor:pointer;
+      font-weight:800;
+      border:none;
+      transition:.25s ease;
+    }
+
+    .btn.primary{
+      background:#6e5034;
+      color:#fff;
+      box-shadow:0 8px 22px rgba(110,80,52,0.3);
+    }
+
+    .btn.primary:hover{
+      background:#8a6848;
+      transform:translateY(-2px);
+    }
+    .btn.secondary{
+     background: rgba(110,80,52,0.10);
+     color:#6e5034;
+     border:1px solid #efe1b5;
+   }
+
+   .btn.secondary:hover{
+     background:#cdb885;
+     transform: translateY(-2px);
+   }
+    
+   .add-icon{
+     width:26px;
+     height:26px;
+     border-radius:50%;
+     background:#fff;
+     color:#6e5034;
+     display:flex;
+     align-items:center;
+     justify-content:center;
+     font-weight:900;
+     line-height:1;
+  }
+    @media (max-width: 820px){
+      .grid{ grid-template-columns:1fr; }
+      .row{ grid-template-columns:1fr; }
+      .edit-page{ margin:1.5rem; padding:1.5rem; }
+    }
   </style>
 </head>
+
 <body>
+
 <main>
-  <section class="form-card">
-    <h1 class="form-title">تعديل الوصفة</h1>
+  <div class="edit-page">
 
-    <form id="recipeForm" data-mode="edit" novalidate>
-      <div class="grid">
-        <div>
-          <label for="name">اسم الوصفة</label>
-          <input class="field" id="name" name="name" type="text" value="تركيبة “فانيلا مسك”" required />
-        </div>
+    <div class="edit-header">
+      <h1>Edit Recipe</h1>
+    </div>
 
-        <div>
-          <label for="category">التصنيف</label>
-          <select class="field" id="category" name="category" required>
-            <option value="" disabled>اختاري</option>
-            <option value="Floral">زهري</option>
-            <option value="Woody" selected>خشبي</option>
-            <option value="Oriental">شرقي</option>
-          </select>
-        </div>
+    <div class="form-card">
+      <form id="recipeForm" data-mode="edit" novalidate>
 
-        <div style="grid-column: 1 / -1;">
-          <label for="description">الوصف</label>
-          <textarea class="field" id="description" name="description" required>تركيبة دافئة تجمع بين الفانيلا والمسك مع لمسة صندل خفيفة.</textarea>
-        </div>
+        <div class="grid">
+          <div>
+            <label for="name">Recipe Name</label>
+            <input class="field" id="name" name="name" type="text" value="Vanilla Musk Blend" required />
+          </div>
 
-        <div style="grid-column: 1 / -1;">
-          <label for="photo">رفع صورة الوصفة (اختياري - إن تبين تغيّرينها)</label>
-          <input class="field" id="photo" name="photo" type="file" accept="image/*" />
-          <div class="current-media">
-            <strong>الصورة الحالية:</strong>
-            <img src="images/recipe1.jpg" alt="الصورة الحالية">
+          <div>
+            <label for="category">For</label>
+            <select class="field" id="category" name="category" required>
+              <option value="Women">Women</option>
+              <option value="Men">Men</option>
+              <option value="Unisex" selected>Unisex</option>
+            </select>
+          </div>
+
+          <div class="full">
+            <label for="description">Description</label>
+            <textarea class="field" id="description" name="description" required>Soft vanilla with clean musk.</textarea>
+          </div>
+
+          <!-- Current photo + Change photo -->
+          <div class="full">
+            <label>Current Photo</label>
+
+            <div class="photo-block">
+              <!-- غيري src للصورة الحالية للوصفة -->
+              <img id="currentPhoto" class="photo-preview" src="img/vanilla.jpg" alt="Current recipe photo" />
+
+              <div style="flex:1; min-width:260px;">
+                <label for="photo">Change Photo</label>
+                <input class="field" id="photo" name="photo" type="file" accept="image/*" />
+                <div class="hint">If you upload a new photo, it will replace the current one.</div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- Ingredients -->
-      <div class="section">
-        <h3>المكونات</h3>
-
+        <h3 class="section-title">Ingredients</h3>
         <div id="ingredientsWrap">
           <div class="row ingredient-row">
             <div>
-              <label>المكون 1: الاسم</label>
-              <input class="field" type="text" name="ingredient_name[]" value="مُثبت (Fixative)" required />
+              <label>Name</label>
+              <input class="field" type="text" name="ingredient_name[]" value="White Musk" required />
             </div>
             <div>
-              <label>المكون 1: الكمية</label>
-              <input class="field" type="text" name="ingredient_qty[]" value="5ml" required />
-            </div>
-          </div>
-
-          <div class="row ingredient-row">
-            <div>
-              <label>المكون 2: الاسم</label>
-              <input class="field" type="text" name="ingredient_name[]" value="مسك أبيض" required />
-            </div>
-            <div>
-              <label>المكون 2: الكمية</label>
+              <label>Amount</label>
               <input class="field" type="text" name="ingredient_qty[]" value="8ml" required />
             </div>
           </div>
         </div>
 
         <div class="actions">
-          <button class="btn secondary" type="button" id="addIngredientBtn">➕ إضافة مكون</button>
+          <button class="btn secondary" type="button" id="addIngredientBtn">
+           <span class="add-icon">+</span> Add Ingredient
+          </button>
         </div>
-      </div>
 
-      <!-- Instructions -->
-      <div class="section">
-        <h3>الخطوات</h3>
-
+        <h3 class="section-title">Instructions</h3>
         <div id="stepsWrap">
           <div class="row row-1col step-row">
             <div>
-              <label>الخطوة 1</label>
-              <input class="field" type="text" name="step_text[]" value="اخلطي المُثبت مع المسك." required />
-            </div>
-          </div>
-
-          <div class="row row-1col step-row">
-            <div>
-              <label>الخطوة 2</label>
-              <input class="field" type="text" name="step_text[]" value="أضيفي الفانيلا تدريجيًا ثم الصندل." required />
+              <label>Step 1</label>
+              <input class="field" type="text" name="step_text[]" value="Mix fixative with musk." required />
             </div>
           </div>
         </div>
 
         <div class="actions">
-          <button class="btn secondary" type="button" id="addStepBtn">➕ إضافة خطوة</button>
+          <button class="btn secondary" type="button" id="addStepBtn">
+           <span class="add-icon">+</span> Add Step
+          </button>
         </div>
-      </div>
 
-      <!-- Video (optional) -->
-      <div class="section">
-        <h3>فيديو أو رابط فيديو (اختياري)</h3>
-
+        <h3 class="section-title">Upload Video or Video Link</h3>
         <div class="grid">
           <div>
-            <label for="videoFile">رفع فيديو</label>
+            <label for="videoFile">Upload Video</label>
             <input class="field" id="videoFile" name="videoFile" type="file" accept="video/*" />
-            <div class="hint">يسمح بالفيديو فقط.</div>
-
-            <div class="current-media">
-              <strong>الفيديو الحالي:</strong>
-              <a class="link" href="https://www.youtube.com/" target="_blank" rel="noopener">رابط فيديو</a>
-            </div>
           </div>
 
           <div>
-            <label for="videoUrl">رابط الفيديو</label>
+            <label for="videoUrl">Video URL</label>
             <input class="field" id="videoUrl" name="videoUrl" type="url" value="https://www.youtube.com/" />
           </div>
         </div>
-      </div>
 
-      <div class="section">
         <div class="actions">
-          <button class="btn" type="submit">✅ تحديث الوصفة</button>
-          <a class="btn secondary" href="my-recipes.html">رجوع</a>
+          <button class="btn primary" type="submit"> Update Recipe
+          </button>
         </div>
-      </div>
-    </form>
-  </section>
+
+      </form>
+    </div>
+
+  </div>
 </main>
-  <!-- JS -->
-  <script src="javaScript.js"></script>
+
+<script>
+  // Preview new photo if user selects one
+  const photoInput = document.getElementById("photo");
+  const currentPhoto = document.getElementById("currentPhoto");
+
+  photoInput.addEventListener("change", () => {
+    const file = photoInput.files && photoInput.files[0];
+    if (!file) return;
+    const url = URL.createObjectURL(file);
+    currentPhoto.src = url;
+  });
+
+  // Submit (Phase 1 simulation) -> redirect to My Recipes
+  document.getElementById("recipeForm").addEventListener("submit", (e) => {
+    e.preventDefault();
+    // هنا لاحقًا تربطينه بالحفظ الحقيقي
+    window.location.href = "my-recipes.html";
+  });
+</script>
+
+<!-- JS المشترك حقكم -->
+<script src="javaScript.js"></script>
 </body>
 </html>
