--- a/MyRecipes.html
+++ b/MyRecipes.html
@@ -1,120 +1,222 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar" dir="ltr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Recipes</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
   <style>
-    .page-head{
-      display:flex; align-items:center; justify-content:space-between;
-      gap:1rem; margin-bottom:1.5rem;
-    }
-    .page-title{
-      color: var(--primary-dark);
-      font-size: 2rem;
-      margin: 0;
-    }
-    .btn{
-      display:inline-flex; align-items:center; justify-content:center;
-      gap:.5rem;
-      padding:.85rem 1.2rem;
-      border-radius: 999px;
-      border: 1px solid var(--border-light);
-      background: var(--primary-light);
-      color: var(--primary-dark);
-      text-decoration:none;
-      font-weight:700;
-      box-shadow: 0 8px 20px var(--shadow-light);
-      transition: .25s ease;
-      white-space: nowrap;
-    }
-    .btn:hover{ transform: translateY(-2px); background: var(--primary-gold); color:#fff; box-shadow:0 12px 26px var(--shadow-gold); }
+   
+body {
+  background-color: #efe1b5;
+}
 
-    .table-wrap{
-      background: var(--card-bg);
-      border: 1px solid var(--border-light);
-      border-radius: 18px;
-      box-shadow: 0 10px 25px var(--shadow-light);
-      overflow: hidden;
-    }
-    table{
-      width:100%;
-      border-collapse: collapse;
-      font-size: 1rem;
-    }
-    thead th{
-      background: linear-gradient(to left, var(--primary-light), rgba(205,184,133,.12));
-      color: var(--primary-dark);
-      text-align: right;
-      padding: 1rem;
-      border-bottom: 1px solid var(--border-light);
-      font-weight: 800;
-      white-space: nowrap;
-    }
-    tbody td{
-      padding: 1rem;
-      border-bottom: 1px solid var(--border-light);
-      color: var(--text-medium);
-      vertical-align: top;
-    }
-    tbody tr:hover td{ background: rgba(239,225,181,.15); }
-    .recipe-link{
-      display:flex; gap:.9rem; align-items:center;
-      color: var(--primary-dark);
-      text-decoration:none;
-      font-weight: 800;
-    }
-    .thumb{
-      width:64px; height:64px; border-radius: 14px;
-      object-fit: cover; border:1px solid var(--border-light);
-      background: var(--bg-lighter);
-      box-shadow: 0 6px 14px var(--shadow-light);
-      flex: 0 0 auto;
-    }
-    .list{
-      margin: 0;
-      padding: 0 1.2rem 0 0;
-    }
-    .list li{ margin: .25rem 0; color: var(--text-light); }
-    .muted{ color: var(--text-light); font-weight: 600; }
-    .link{
-      color: var(--primary-dark);
-      text-decoration:none;
-      font-weight: 800;
-      padding:.35rem .7rem;
-      border-radius: 999px;
-      border: 1px solid var(--border-light);
-      background: rgba(239,225,181,.35);
-      display:inline-block;
-      transition:.2s;
-      white-space: nowrap;
-    }
-    .link:hover{ background: var(--primary-light); transform: translateY(-1px); }
-    .danger{ background: rgba(255, 92, 92, .08); border-color: rgba(255,92,92,.25); color:#a63030; }
-    .danger:hover{ background: rgba(255,92,92,.12); }
+/* الحاوية الرئيسية */
+.my-recipes-page {
+  max-width: 1300px;
+  margin: 3rem auto;
+  padding: 2rem;
+  background-color: #fff;
+  border-radius: 24px;
+  box-shadow: 0 18px 40px rgba(110, 80, 52, 0.18);
+  border: 1px solid #cdb885;
+}
 
-    /* Responsive table */
-    .table-scroll{ overflow:auto; }
-    @media (max-width: 900px){
-      .page-title{ font-size: 1.6rem; }
-      thead th, tbody td{ padding:.85rem; }
-    }
+/* عنوان الصفحة + زر */
+.my-recipes-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2.5rem;
+}
+
+.my-recipes-header h1 {
+  font-size: 2.3rem;
+  color: #6e5034;
+  font-weight: 800;
+}
+
+/* زر إضافة وصفة */
+.add-recipe-btn {
+  background: linear-gradient(135deg, #6e5034, #6e5034);
+  color: #fff;
+  padding: 0.9rem 1.8rem;
+  border-radius: 30px;
+  text-decoration: none;
+  font-weight: 700;
+  transition: 0.3s ease;
+  box-shadow: 0 8px 22px rgba(110, 80, 52, 0.3);
+}
+
+.add-recipe-btn:hover {
+  background: #8a6848;
+  color: #fff;
+  transform: translateY(-2px);
+}
+
+/* كرت الجدول */
+.recipes-table-container {
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 1.5rem;
+  border: 1px solid #efe1b5;
+  box-shadow: inset 0 0 0 1px rgba(205, 184, 133, 0.3);
+  overflow-x: auto;
+  direction: ltr;
+}
+
+/* الجدول */
+.recipes-table {
+  width: 100%;
+  border-collapse: collapse;
+  min-width: 900px;
+}
+
+/* الهيدر */
+.recipes-table thead {
+  background-color: #6e5034;
+}
+
+.recipes-table th {
+  padding: 1.1rem;
+  color: #fff;
+  font-weight: 800;
+  text-align: left;
+  border-bottom: 2px solid #cdb885;
+}
+
+/* الخلايا */
+.recipes-table td {
+  padding: 1.1rem;
+  color: #5d4a32;
+  border-bottom: 1px solid #efe1b5;
+  vertical-align: top;
+  text-align: left;
+}
+
+/* صفوف الجدول */
+.recipes-table tbody tr {
+  transition: background-color 0.25s ease;
+}
+
+.recipes-table tbody tr:hover {
+  background-color: rgba(239, 225, 181, 0.45);
+}
+
+/* الوصفة (صورة + اسم) */
+.recipe-info {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-weight: 700;
+  color: #6e5034;
+  text-decoration: none;
+}
+
+.recipe-info img {
+  width: 68px;
+  height: 68px;
+  border-radius: 16px;
+  object-fit: cover;
+  border: 2px solid #efe1b5;
+  background-color: #fff;
+}
+
+/* المكونات والخطوات */
+.recipe-list {
+  padding-right: 1.2rem;
+  margin: 0;
+}
+
+.recipe-list li {
+  font-size: 0.95rem;
+  margin-bottom: 0.35rem;
+}
+
+/* الروابط */
+.action-link {
+  display: inline-block;
+  padding: 0.4rem 1rem;
+  border-radius: 20px;
+  font-size: 0.9rem;
+  font-weight: 700;
+  text-decoration: none;
+  transition: 0.25s ease;
+}
+
+/* تعديل */
+.action-edit {
+  background-color: #efe1b5;
+  color: #6e5034;
+}
+
+.action-edit:hover {
+  background-color: #cdb885;
+}
+
+/* حذف */
+.action-delete {
+  background-color: rgba(110, 80, 52, 0.12);
+  color: #6e5034;
+}
+
+.action-delete:hover {
+  background-color: #6e5034;
+  color: #fff;
+}
+
+/* فيديو */
+.video-link {
+  color: #6e5034;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+.no-video {
+  color: #9c8a6a;
+  font-style: italic;
+}
+
+/* إعجابات */
+.likes-count {
+  font-weight: 800;
+  color: #6e5034;
+  text-align: center;
+}
+
+/* للجوال */
+@media (max-width: 768px) {
+  .my-recipes-page {
+    margin: 1.5rem;
+    padding: 1.5rem;
+  }
+
+  .my-recipes-header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+
+  .my-recipes-header h1 {
+    font-size: 1.9rem;
+  }
+}
+
   </style>
 </head>
 <body>
 
 <main>
-  <div class="page-head">
-    <h1 class="page-title">My Recipes</h1>
-    <a class="btn" href="add-recipe.html">➕ Add New Recipe</a>
-  </div>
+  <div class="my-recipes-page">
 
-  <div class="table-wrap">
-    <div class="table-scroll">
-      <table aria-label="My Recipes Table">
+    <div class="my-recipes-header">
+      <h1>My Recipes</h1>
+      <a href="AddRecipePage.html" class="add-recipe-btn">+ Add New Recipe</a>
+    </div>
+
+    <div class="recipes-table-container" style="direction: ltr;">
+      <table class="recipes-table" aria-label="My Recipes Table">
         <thead>
           <tr>
             <th>Recipe</th>
@@ -131,67 +233,89 @@
           <!-- Recipe 1 -->
           <tr>
             <td>
-              <a class="recipe-link" href="view-recipe.html">
-                <img class="thumb" src="images/recipe1.jpg" alt="Photo">
-                <span>تركيبة “فانيلا مسك”</span>
+              <a href="view-recipe.html" class="recipe-info">
+                <img src="img/vanilla.jpg" alt="Recipe Image">
+                <span>Vanilla Musk Blend</span>
               </a>
             </td>
+
             <td>
-              <ul class="list">
-                <li>مُثبت (Fixative): 5ml</li>
-                <li>مسك أبيض: 8ml</li>
-                <li>فانيلا: 6ml</li>
-                <li>خشب صندل: 3ml</li>
+              <ul class="recipe-list">
+                <li>Fixative – 5ml</li>
+                <li>White Musk – 8ml</li>
+                <li>Vanilla – 6ml</li>
+                <li>Sandalwood – 3ml</li>
               </ul>
             </td>
+
             <td>
-              <ol class="list">
-                <li>اخلطي المُثبت مع المسك.</li>
-                <li>أضيفي الفانيلا تدريجيًا.</li>
-                <li>أضيفي الصندل واتركيه 24 ساعة.</li>
+              <ol class="recipe-list">
+                <li>Mix fixative with musk.</li>
+                <li>Add vanilla gradually.</li>
+                <li>Add sandalwood and rest for 24 hours.</li>
               </ol>
             </td>
+
             <td>
-              <a class="link" href="https://www.youtube.com/" target="_blank" rel="noopener">رابط فيديو</a>
+              <a class="video-link" href="https://www.youtube.com/" target="_blank">Watch Video</a>
             </td>
-            <td><strong>22</strong></td>
-            <td><a class="link" href="edit-recipe.html">تعديل</a></td>
-            <td><a class="link danger" href="my-recipes.html">حذف</a></td>
+
+            <td class="likes-count">22</td>
+
+            <td>
+              <a href="EditRecipePage.html" class="action-link action-edit">Edit</a>
+            </td>
+
+            <td>
+              <a href="my-recipes.html" class="action-link action-delete">Delete</a>
+            </td>
           </tr>
 
           <!-- Recipe 2 -->
           <tr>
             <td>
-              <a class="recipe-link" href="view-recipe.html">
-                <img class="thumb" src="images/recipe2.jpg" alt="صورة وصفة 2">
-                <span>تركيبة “ورد عنبر”</span>
+              <a href="view-recipe.html" class="recipe-info">
+                <img src="img/amber.webp" alt="Recipe Image">
+                <span>Rose Amber Blend</span>
               </a>
             </td>
+
             <td>
-              <ul class="list">
-                <li>عنبر: 6ml</li>
-                <li>ورد طائفي: 7ml</li>
-                <li>برغموت: 3ml</li>
+              <ul class="recipe-list">
+                <li>Amber – 6ml</li>
+                <li>Taif Rose – 7ml</li>
+                <li>Bergamot – 3ml</li>
               </ul>
             </td>
+
             <td>
-              <ol class="list">
-                <li>امزجي العنبر مع الورد.</li>
-                <li>أضيفي البرغموت.</li>
-                <li>اتركي الخلطة 48 ساعة.</li>
+              <ol class="recipe-list">
+                <li>Blend amber with rose.</li>
+                <li>Add bergamot.</li>
+                <li>Let it rest for 48 hours.</li>
               </ol>
             </td>
-            <td class="muted">no video for recipe</td>
-            <td><strong>9</strong></td>
-            <td><a class="link" href="edit-recipe.html">تعديل</a></td>
-            <td><a class="link danger" href="my-recipes.html">حذف</a></td>
+
+            <td class="no-video">No video available</td>
+
+            <td class="likes-count">9</td>
+
+            <td>
+              <a href="edit-recipe.html" class="action-link action-edit">Edit</a>
+            </td>
+
+            <td>
+              <a href="my-recipes.html" class="action-link action-delete">Delete</a>
+            </td>
           </tr>
 
         </tbody>
       </table>
     </div>
+
   </div>
 </main>
+
 
 
   <!-- JS -->
