--- a/PageSignUp.html
+++ b/PageSignUp.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sillage | Sign Up</title>
-  <link rel="stylesheet" href="style.cssss"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body class="leen-app">
