--- a/Userpage.html
+++ b/Userpage.html
@@ -9,7 +9,7 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 
-<body class="light-mode">
+<body >
   <!-- الهيدر -->
   <header class="header">
     <!-- قسم التحكم - الآن على اليمين -->
