--- a/Userpage.html
+++ b/Userpage.html
@@ -208,6 +208,6 @@ Sillage Perfumes</h3>
   <div class="copyright">
     © 2023 Al-Katloni. All rights reserved.
 </footer>
-
+<script src="javaScript.js"></script>
 </body>
 </html>
