--- a/foooterHe.html
+++ b/foooterHe.html
@@ -13,14 +13,7 @@
     <!-- قسم التحكم - الآن على اليمين -->
     <div class="controls">
       <!-- أيقونات إضافية -->
-      <div class="icon-buttons">
-        <button class="icon-btn" id="notificationBtn">
-          <i class="fas fa-bell"></i>
-        </button>
-        <button class="icon-btn" id="settingsBtn">
-          <i class="fas fa-cog"></i>
-        </button>
-      </div>
+      
 
       <!-- زر تبديل الوضع -->
       <button class="theme-toggle" id="themeToggle">
@@ -99,9 +92,8 @@ Sillage Perfumes</h3>
 
   <!-- Copyright -->
   <div class="copyright">
-    © 2023 Al-Katloni. All rights reserved.
+    © 2026, All rights reserved to Sillage.
 </footer>
-
 
 </body>
 </html>
