--- a/Userpage.html
+++ b/Userpage.html
@@ -15,14 +15,7 @@
     <!-- قسم التحكم - الآن على اليمين -->
     <div class="controls">
       <!-- أيقونات إضافية -->
-      <div class="icon-buttons">
-        <button class="icon-btn" id="notificationBtn">
-          <i class="fas fa-bell"></i>
-        </button>
-        <button class="icon-btn" id="settingsBtn">
-          <i class="fas fa-cog"></i>
-        </button>
-      </div>
+      
 
       <!-- زر تبديل الوضع -->
       <button class="theme-toggle" id="themeToggle">
@@ -155,6 +148,8 @@
         </section>
     </main>
     <!-- Footer -->
+
+<!-- Footer -->
 <footer class="site-footer">
   <div class="footer-container">
 
@@ -206,7 +201,7 @@ Sillage Perfumes</h3>
 
   <!-- Copyright -->
   <div class="copyright">
-    © 2023 Al-Katloni. All rights reserved.
+    © 2026, All rights reserved to Sillage.
 </footer>
 <script src="javaScript.js"></script>
 </body>
