--- a/PageLogIn.html
+++ b/PageLogIn.html
@@ -11,7 +11,7 @@
   <main class="leen-landing">
     <section class="leen-card" style="width:min(560px, 92%);">
 
-      <img class="leen-logo" src="img/logo.jpg" alt="Sillage Logo" style="width:120px;height:120px;" />
+      <img class="leen-logo" src="img/logo.png" alt="Sillage Logo" style="width:120px;height:120px;" />
 
       <h1 class="leen-title" style="font-size:28px;">Welcome Back</h1>
       <p class="leen-helper">Enter your email and password:</p>
