--- a/SystemHomepage.html
+++ b/SystemHomepage.html
@@ -11,7 +11,7 @@
   <main class="leen-landing">
     <section class="leen-card leen-landing-card">
 
-      <img class="leen-logo" src="img/logo.jpg" alt="Sillage Logo" />
+      <img class="leen-logo" src="img/logo.png" alt="Sillage Logo" />
 
       <h1 class="leen-title" style="font-size:34px;">Sillage</h1>
       <p class="leen-subtitle">A signature scent for every moment.</p>
