--- a/MyRecipes.html
+++ b/MyRecipes.html
@@ -68,7 +68,7 @@
           <!-- Recipe 1 -->
           <tr>
             <td>
-              <a href="view-recipe.html" class="recipe-info">
+              <a href="ViewRecipePage.html" class="recipe-info">
                 <img src="img/vanilla.jpg" alt="Recipe Image">
                 <span>Vanilla Musk Blend</span>
               </a>
