--- a/Userpage.html
+++ b/Userpage.html
@@ -60,7 +60,7 @@
         </section>
 
         <section class="remas-my-recipes-stats remas-card">
-            <a href="my-recipes.html" class="remas-section-title-link">
+            <a href="MyRecipes.html" class="remas-section-title-link">
                 <h2>My Recipes</h2> 
             </a>
             <div class="remas-stats-content">
