--- a/AdminPage.html
+++ b/AdminPage.html
@@ -38,7 +38,7 @@
     <div class="logo-container">
       <div class="logo-text">Sillage</div>
       <div class="logo-icon">
-        <img src="img/logo.jpg" alt="لوقو الموقع" />
+        <img src="img/logo.png" alt="لوقو الموقع" />
       </div>
     </div>
   </header>
